refactor: downgrade to use only JDK 8 features (e.g. no records)